Initial project commit1

--- a/.github/workflows/pytest_selenium.yml
+++ b/.github/workflows/pytest_selenium.yml
@@ -19,39 +19,20 @@ jobs:
       with:
         python-version: "3.10"
 
-    # ---------- Install Google Chrome ----------
-    - name: Install Google Chrome
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y wget gnupg
-        wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-        sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list'
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
-
-    # ---------- Install Dependencies ----------
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    # ---------- Install Allure CLI ----------
     - name: Install Allure CLI
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y default-jre
-        wget https://github.com/allure-framework/allure2/releases/latest/download/allure-2.24.0.tgz
-        sudo tar -zxvf allure-2.24.0.tgz -C /opt/
-        sudo ln -s /opt/allure-2.24.0/bin/allure /usr/bin/allure
+      uses: mikepenz/action-allure-report@v2
 
-    # ---------- Run Pytest with Allure ----------
-    - name: Run Pytest
-      run: |
-        pytest -vs --alluredir=allure-results
+    - name: Run Tests
+      run: pytest -vs --alluredir=allure-results
 
-    # ---------- Upload Allure Results as Artifact ----------
-    - name: Upload Allure Results
-      uses: actions/upload-artifact@v4
+    - name: Generate Allure Report
+      uses: mikepenz/action-allure-report@v2
+      if: always()
       with:
-        name: allure-results
-        path: allure-results
+        allure_results: allure-results
+        report_path: allure-report
