--- a/.github/workflows/pytest_selenium.yml
+++ b/.github/workflows/pytest_selenium.yml
@@ -1,4 +1,4 @@
-name: Selenium Pytest Automation
+name: Python Tests with Allure
 
 on:
   push:
@@ -11,28 +11,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
 
-    - name: Install Allure CLI
-      uses: mikepenz/action-allure-report@v2
+      - name: Run Tests
+        run: |
+          pytest --alluredir=allure-results
 
-    - name: Run Tests
-      run: pytest -vs --alluredir=allure-results
+      - name: Generate Allure Report
+        uses: simple-elf/allure-report-action@v1.7
+        with:
+          allure_results: allure-results
+          allure_report: allure-report
 
-    - name: Generate Allure Report
-      uses: mikepenz/action-allure-report@v2
-      if: always()
-      with:
-        allure_results: allure-results
-        report_path: allure-report
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: allure-report
