--- a/.github/workflows/pytest_selenium.yml
+++ b/.github/workflows/pytest_selenium.yml
@@ -1,4 +1,4 @@
-name: Python Selenium Tests with Allure
+name: Selenium Pytest Automation
 
 on:
   push:
@@ -11,47 +11,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
 
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget gnupg unzip
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Install ChromeDriver (latest)
-        run: |
-          CHROME_VERSION=$(google-chrome --version | awk '{print $3}')
-          DRIVER_VERSION=$(wget -qO- "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION%%.*}")
-          wget "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/chromedriver
-          sudo chmod +x /usr/local/bin/chromedriver
-          chromedriver --version
+    - name: Install Allure CLI
+      run: |
+        sudo apt update
+        sudo apt install -y default-jre
+        wget https://github.com/allure-framework/allure2/releases/latest/download/allure-commandline.zip
+        unzip allure-commandline.zip -d /opt/allure
+        sudo ln -s /opt/allure/bin/allure /usr/bin/allure
 
-      - name: Install Python dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install allure-pytest
+    - name: Run Tests
+      run: |
+        pytest -vs --alluredir=allure-results
 
-      - name: Run Pytest
-        run: pytest --alluredir=allure-results
+    - name: Generate Allure Report
+      run: |
+        allure generate allure-results -o allure-report --clean
 
-      - name: Generate Allure Report
-        uses: simple-elf/allure-report-action@v1.7
-        with:
-          allure_results: allure-results
-          allure_report: allure-report
-
-      - name: Upload Allure Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report
+    - name: Publish Allure Report to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: allure-report
